fixed overflow and word wrap

--- a/flaskblog/static/main.css
+++ b/flaskblog/static/main.css
@@ -29,6 +29,8 @@ h1, h2, h3, h4, h5, h6 {
   padding: 10px 20px;
   border: 1px solid #dddddd;
   border-radius: 3px;
+  overflow: hidden;
+  word-wrap: anywhere;
   margin-bottom: 20px;
 }
 
